fix erro TFIM guide

--- a/examples/TFIM_guide.ipynb
+++ b/examples/TFIM_guide.ipynb
@@ -687,7 +687,7 @@
     "    EE.append(E)\n",
     "\n",
     "for i in range(2,L-2):\n",
-    "    En_fin,_,EE_pre =sys.step2sites(i,dir='r',stage='Final')\n",
+    "    En_fin,_ =sys.step2sites(i,dir='r',stage='Final')\n",
     "    EE.append(E)\n",
     "    \n",
     "    k += 1\n",
