--- a/examples/TFIM_guide.ipynb
+++ b/examples/TFIM_guide.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "15137af2",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f4128ef9",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1bccd86f",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "777b9be8",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "c54c7df8",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "bdda25b1",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "c4bd79fc",
    "metadata": {},
    "outputs": [
@@ -494,17 +494,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "3192ecea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x743781a14e20>]"
+       "[<matplotlib.lines.Line2D at 0x721ef7c375e0>]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -573,17 +573,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "82b90125",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x743781eb2dd0>]"
+       "[<matplotlib.lines.Line2D at 0x721ef7b43940>]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -605,17 +605,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "7fe46d57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x743781d2bb20>]"
+       "[<matplotlib.lines.Line2D at 0x721ef7bdca30>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "9e883602",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(En0)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m site,\u001b[38;5;28mdir\u001b[39m \u001b[38;5;129;01min\u001b[39;00m mps\u001b[38;5;241m.\u001b[39mfirst_sweep():\n\u001b[0;32m---> 17\u001b[0m     En,_,EE_pre \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstep2sites(site,\u001b[38;5;28mdir\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdir\u001b[39m)\n\u001b[1;32m     18\u001b[0m     EE\u001b[38;5;241m.\u001b[39mappend(E)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m site,\u001b[38;5;28mdir\u001b[39m \u001b[38;5;129;01min\u001b[39;00m mps\u001b[38;5;241m.\u001b[39msweep():\n",
+      "Cell \u001b[0;32mIn[15], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(En0)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m site,\u001b[38;5;28mdir\u001b[39m \u001b[38;5;129;01min\u001b[39;00m mps\u001b[38;5;241m.\u001b[39mfirst_sweep():\n\u001b[0;32m---> 17\u001b[0m     En,_,EE_pre \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstep2sites(site,\u001b[38;5;28mdir\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdir\u001b[39m)\n\u001b[1;32m     18\u001b[0m     EE\u001b[38;5;241m.\u001b[39mappend(E)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m site,\u001b[38;5;28mdir\u001b[39m \u001b[38;5;129;01min\u001b[39;00m mps\u001b[38;5;241m.\u001b[39msweep():\n",
       "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 2)"
      ]
     }
@@ -679,11 +679,11 @@
     "print(En0)\n",
     "\n",
     "for site,dir in mps.first_sweep():\n",
-    "    En,_,EE_pre = sys.step2sites(site,dir=dir)\n",
+    "    En,_ = sys.step2sites(site,dir=dir)\n",
     "    EE.append(E)\n",
     "\n",
     "for site,dir in mps.sweep():\n",
-    "    En,_,EE_pre = sys.step2sites(site,dir=dir)\n",
+    "    En,_ = sys.step2sites(site,dir=dir)\n",
     "    EE.append(E)\n",
     "\n",
     "for i in range(2,L-2):\n",
@@ -701,6 +701,18 @@
    "display_name": ".dmrg",
    "language": "python",
    "name": ".dmrg"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
