start local dependence

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -13,7 +13,22 @@
    "id": "3125bb8b",
    "metadata": {},
    "source": [
-    "`No updates in progress`"
+    "`Local dependence for the MPO`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68dcc51b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class test_MPO():\n",
+    "\n",
+    "    Id = np.identity(2)\n",
+    "    Z = np.array([[1,0],[0,-1]])\n",
+    "    X = np.array([[0,1],[1,0]])\n",
+    "    "
    ]
   }
  ],
@@ -22,18 +37,6 @@
    "display_name": ".dmrg",
    "language": "python",
    "name": ".dmrg"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
   }
  },
  "nbformat": 4,
