--- a/examples/TFIM_guide.ipynb
+++ b/examples/TFIM_guide.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def mpo(J,h_x):\n",
+    "def mpo(J,h_x,p=None):\n",
     "    \n",
     "    # Define as empty tensor\n",
     "    MPO = np.zeros((2,2,3,3))\n",
@@ -177,7 +177,7 @@
     "        return Wleft\n",
     "\n",
     "\n",
-    "    def mpo(self):\n",
+    "    def mpo(self,p=None):\n",
     "\n",
     "        # Define an empty tensor\n",
     "        MPO = np.zeros((2,2,3,3))\n",
@@ -256,7 +256,7 @@
     "        return Wleft\n",
     "\n",
     "\n",
-    "    def mpo(self):\n",
+    "    def mpo(self,p=None):\n",
     "\n",
     "        # Define an empty tensor\n",
     "        MPO = np.zeros((2,2,3,3))\n",
