--- a/examples/TFIM_guide.ipynb
+++ b/examples/TFIM_guide.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15137af2",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f4128ef9",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1bccd86f",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bdda25b1",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x721ef7c375e0>]"
+       "[<matplotlib.lines.Line2D at 0x7bf925537730>]"
       ]
      },
      "execution_count": 10,
@@ -532,7 +532,7 @@
    "id": "1b011e49",
    "metadata": {},
    "source": [
-    "Now we can collect the observables we are interested in like local magnetization $\\langle \\sigma^z\\rangle$, two point correlation functions and entanglement entropy $S = - \\mathrm{Tr}( \\rho^2 \\log(\\rho^2))$"
+    "Now we can collect the observables we are interested in like local magnetization $\\langle \\sigma^z\\rangle$ and entanglement entropy $S = - \\mathrm{Tr}( \\rho \\log(\\rho))$"
    ]
   },
   {
@@ -567,13 +567,52 @@
     "    Z[1,k] = obs.single_site(site,h.Z).real\n",
     "    k +=1\n",
     "\n",
+    "# left sweep (otional)\n",
     "for site,dir in mps.left_sweep():\n",
-    "    En,s = sys.step2sites(site,dir=dir,stage='Final')\n"
+    "    En,s = sys.step2sites(site,dir=dir,stage='Final')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea462188",
+   "metadata": {},
+   "source": [
+    "To collect the two point functions eg. $\\langle \\sigma^z_i \\sigma_j^z\\rangle$  we need to use the specific method of the observables class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "id": "d580b525",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "observables.all_corr() got an unexpected keyword argument 'string'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m En,s \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstep2sites(site,\u001b[38;5;28mdir\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdir\u001b[39m,stage\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFinal\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# The string must be always specified, depending on your model, if only obs1 is specified then obs2 = obs1\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mobs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mall_corr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_out\u001b[49m\u001b[43m,\u001b[49m\u001b[43msite\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstring\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mId\u001b[49m\u001b[43m,\u001b[49m\u001b[43mobs1\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43mobs2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: observables.all_corr() got an unexpected keyword argument 'string'"
+     ]
+    }
+   ],
+   "source": [
+    "# specify where you want to save the correlations \n",
+    "path_out = 'OUT/ZZ.txt'\n",
+    "\n",
+    "# run a right sweep and collect all the correlations \n",
+    "for site,dir in mps.right_sweep():\n",
+    "    En,s = sys.step2sites(site,dir=dir,stage='Final')\n",
+    "\n",
+    "    # The string must be always specified, depending on your model, if only obs1 is specified then obs2 = obs1\n",
+    "    obs.all_corr(path_out,site,string=h.Id,obs1=h.Z,obs2=h.Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "82b90125",
    "metadata": {},
    "outputs": [
@@ -605,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7fe46d57",
    "metadata": {},
    "outputs": [
@@ -637,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9e883602",
    "metadata": {},
    "outputs": [
@@ -690,6 +729,18 @@
    "display_name": ".dmrg",
    "language": "python",
    "name": ".dmrg"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
