fix observable.all_corr bug

--- a/examples/TFIM_guide.ipynb
+++ b/examples/TFIM_guide.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bdda25b1",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7bf925537730>]"
+       "[<matplotlib.lines.Line2D at 0x7511bcb1f730>]"
       ]
      },
      "execution_count": 10,
@@ -582,19 +582,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d580b525",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "observables.all_corr() got an unexpected keyword argument 'string'",
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m En,s \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstep2sites(site,\u001b[38;5;28mdir\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdir\u001b[39m,stage\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFinal\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# The string must be always specified, depending on your model, if only obs1 is specified then obs2 = obs1\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mobs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mall_corr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_out\u001b[49m\u001b[43m,\u001b[49m\u001b[43msite\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstring\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mId\u001b[49m\u001b[43m,\u001b[49m\u001b[43mobs1\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43mobs2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: observables.all_corr() got an unexpected keyword argument 'string'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m En,s \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstep2sites(site,\u001b[38;5;28mdir\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdir\u001b[39m,stage\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFinal\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# The string must be always specified, depending on your model, if only obs1 is specified then obs2 = obs1\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mobs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mall_corr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_out\u001b[49m\u001b[43m,\u001b[49m\u001b[43msite\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstring\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mId\u001b[49m\u001b[43m,\u001b[49m\u001b[43mobs1\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43mobs2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZ\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Code/.dmrg/lib/python3.10/site-packages/dmrg/obs.py:39\u001b[0m, in \u001b[0;36mobservables.all_corr\u001b[0;34m(self, path, site, string, obs1, obs2)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mall_corr\u001b[39m(\u001b[38;5;28mself\u001b[39m,path,site,string,obs1,obs2\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m---> 39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m obs2 \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     40\u001b[0m         obs2 \u001b[38;5;241m=\u001b[39m obs1\n\u001b[1;32m     41\u001b[0m     ten \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mtensordot(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmps\u001b[38;5;241m.\u001b[39mread(site),\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmps\u001b[38;5;241m.\u001b[39mreadS(site),(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m0\u001b[39m)) \n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
    ],
@@ -608,6 +609,28 @@
     "\n",
     "    # The string must be always specified, depending on your model, if only obs1 is specified then obs2 = obs1\n",
     "    obs.all_corr(path_out,site,string=h.Id,obs1=h.Z,obs2=h.Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "01d793ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs = h.Z\n",
+    "obs.all() == None"
    ]
   },
   {
