update lanczos eigsh_tridiagonal

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -37,69 +37,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a5a828e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.linalg import eigh_tridiagonal\n",
-    "from scipy.sparse.linalg import eigsh\n",
-    "from numpy.linalg import eigh "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "419c264b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len = 1000\n",
-    "a = np.random.rand(len)\n",
-    "b = np.random.rand(len-1)\n",
-    "mat = np.diag(a)\n",
-    "for i in range(len-1):\n",
-    "    mat[i,i+1] = mat[i+1,i] = b[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05a2d231",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e1,v1 = eigh_tridiagonal(a,b)\n",
-    "e2,v2 = eigh(mat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8dfc82d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum(mat@v2[:,0] - e2[0]*v2[:,0])\n",
-    "sum(mat@v1[:,0] - e1[0]*v1[:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "043fbf42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vec = np.random.random(100)\n",
-    "a = [vec]\n",
-    "a[-1]\n",
-    "a.append(vec**2)\n",
-    "a"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4d734395",
    "metadata": {},
@@ -117,6 +54,7 @@
     "import numpy as np\n",
     "import warnings\n",
     "from scipy.linalg import eigh_tridiagonal\n",
+    "from scipy.sparse.linalg import ArpackNoConvergence\n",
     "\n",
     "class EffH():\n",
     "\n",
@@ -191,14 +129,17 @@
     "            psi0 = np.random.rand(self.c1*self.c2*self.d**2)\n",
     "        T, vecs = self.lanc_iter(psi0,exc=exc)\n",
     "\n",
-    "        # check orthogonality\n",
-    "        # if not np.isclose(vecs.T@vecs,np.identity(vecs.shape[1])).all(): #(new != np.identity(vecs.shape[0])).all():\n",
-    "        #     print('Vecs not orthonormal in ',self.site)\n",
-    "        \n",
-    "        E, v = np.linalg.eigh(T)\n",
-    "        result = vecs @ v[:, np.argmin(E)]\n",
-    "        if exc == 'off':\n",
-    "            E = min(E)\n",
+    "        try:\n",
+    "            E,v = eigh_tridiagonal(np.diag(T),np.diag(T,k=1),select='i',select_range=(0,2))\n",
+    "            result = vecs @ v[:, np.argmin(E)]\n",
+    "\n",
+    "            if exc == 'off':\n",
+    "                E = min(E)\n",
+    "        except ArpackNoConvergence as err:\n",
+    "            print('Lanczos did not converge !!!')\n",
+    "            E = psi0.conj()@self.matvec(psi0)\n",
+    "            result = psi0\n",
+    "\n",
     "        return E, result"
    ]
   },
@@ -214,6 +155,7 @@
     "# from .MPS import MPS\n",
     "# from .cont import CONT\n",
     "# from dmrg_src.lanczos import EffH\n",
+    "from scipy.linalg import svd\n",
     "\n",
     "class dmrg():\n",
     "    \"\"\"\n",
@@ -289,7 +231,8 @@
     "        \n",
     "        grd_state = np.reshape(grd_state,(H.c1*H.d,H.d*H.c2))\n",
     "\n",
-    "        l,c,r = np.linalg.svd(grd_state,full_matrices=False)\n",
+    "        # l,c,r = np.linalg.svd(grd_state,full_matrices=False)\n",
+    "        l,c,r = svd(grd_state,full_matrices=False)\n",
     "        \n",
     "        cut = min(len(c[c**2>self.cut]),self.chi)\n",
     "        \n",
@@ -539,8 +482,8 @@
    "outputs": [],
    "source": [
     "L = 18\n",
-    "mps = MPS(L,d=4)\n",
     "h = MPO_AL(.1,.2,.3,.4,.5)\n",
+    "mps = MPS(L,d=h.d)\n",
     "cont = CONT(mps,h) \n",
     "sys = dmrg(cont,chi=2,k=100)\n",
     "obs = observables(mps)\n",
@@ -611,34 +554,6 @@
     "#         ZZ_10_13 = obs.two_sites(site,site+3,string=h.Id,obs1=h.Id)\n",
     "\n",
     "# plt.plot(EE[1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e994fa8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import product\n",
-    "dim = [4,2,2]\n",
-    "Id4 = np.identity(4)\n",
-    "res = np.zeros((2,2,4))\n",
-    "ranges = [range(d) for d in dim]\n",
-    "for i in product(*ranges):\n",
-    "    res[i[0],i[1],i[2]] =Id4[i[0]i[1]i[2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07c24afe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d=4\n",
-    "a = np.reshape(np.identity(d**2)[:,:d],(d,d,d))\n",
-    "np.tensordot(a,a,((0,1),(0,1)))"
    ]
   },
   {
@@ -829,13 +744,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa17978a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7a9fb44f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.random.random(100)\n",
-    "b = np.random.random(99)\n",
+    "dim =20000\n",
+    "a = np.random.random(dim)\n",
+    "b = np.random.random(dim-1)\n",
     "mat = np.diag(a)+np.diag(b,k=1)+np.diag(b,k=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5430b98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1,b1 = eigh_tridiagonal(a,b,select='i',select_range=(0,2))\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b1ff03d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try: \n",
+    "    a1,b1 = eigh_tridiagonal(a,b,select='i',select_range=(0,2))\n",
+    "except ArpackNoConvergence as err:\n",
+    "    print('aaaaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9944236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a2,b2 = eigsh(mat,k=3,which='SA')\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52e96fd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "eigsh(mat,k=1,which='SA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be7a20f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "eigh_tridiagonal(a,b,select='i',select_range=(0,2))"
    ]
   },
   {
@@ -907,6 +888,18 @@
    "display_name": ".dmrg",
    "language": "python",
    "name": ".dmrg"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
